[project]
name = "abuse-ip-checker"
version = "2.0.0"
description = "Multi-source threat intelligence CLI for checking IP addresses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2024.6.2",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "idna>=3.7",
    "pyyaml>=6.0",
    "requests>=2.32.3",
    "urllib3>=2.2.1",
]

[project.scripts]
abuse-ip-checker = "abuse_ip_checker.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
