[project]
name = "abuse-ip-checker"
version = "2.0.0"
description = "Multi-source threat intelligence CLI for checking IP addresses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0",
    "requests>=2.32.3",
]

[project.scripts]
abuse-ip-checker = "abuse_ip_checker.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
